force-app/main/default/objects/Carbon_Credit_Retirement__c/Carbon_Credit_Retirement__c.object-meta.xml
<CustomObject>
    <label>Carbon Credit Retirement</label>
    <nameField>
        <displayFormat>CCR-{0000000000}</displayFormat>
        <label>Carbon Credit Retirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carbon Credit Retirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>