force-app/main/default/objects/Carbon_Credit_Retirement__c/fields/Carbon_Credit__c.field-meta.xml
<CustomField>
    <fullName>Carbon_Credit__c</fullName>
    <label>Carbon Credit</label>
    <referenceTo>Carbon_Credit__c</referenceTo>
    <relationshipLabel>Carbon Credit Retirements</relationshipLabel>
    <relationshipName>Carbon_Credit_Retirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>