force-app/main/default/objects/Carbon_Credit_Retirement__c/fields/Carbon_Footprint__c.field-meta.xml
<CustomField>
    <fullName>Carbon_Footprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carbon Footprint</label>
    <referenceTo>sustain_app__ConsumptionReport__c</referenceTo>
    <relationshipLabel>Carbon Credit Retirements</relationshipLabel>
    <relationshipName>Carbon_Credit_Retirements</relationshipName>
    <type>Lookup</type>
</CustomField>