force-app/main/default/objects/Carbon_Credit_Retirement__c/fields/Date_Retired__c.field-meta.xml
<CustomField>
    <fullName>Date_Retired__c</fullName>
    <label>Date Retired</label>
    <type>Date</type>
</CustomField>