force-app/main/default/objects/Carbon_Credit_Retirement__c/fields/Retirement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Notes__c</fullName>
    <label>Retirement Notes</label>
    <type>TextArea</type>
</CustomField>