force-app/main/default/objects/Carbon_Credit_Retirement__c/fields/Serial_Block_End__c.field-meta.xml
<CustomField>
    <fullName>Serial_Block_End__c</fullName>
    <label>Serial Block End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>