force-app/main/default/objects/Carbon_Credit_Retirement__c/fields/Serial_Block_Start__c.field-meta.xml
<CustomField>
    <fullName>Serial_Block_Start__c</fullName>
    <label>Serial Block Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>