force-app/main/default/objects/Carbon_Credit_Retirement__c/fields/Vintage__c.field-meta.xml
<CustomField>
    <fullName>Vintage__c</fullName>
    <formula>VALUE(TEXT(Carbon_Credit__r.Vintage__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vintage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>